[tool.poetry]
name = "docker-compare-mysql-master-slave"
version = "0.1.0"
description = ""
authors = ["pawel <pawel@werda.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mysql-connector-python = "8.2.0"
schedule = "1.2.0"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
